--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -55,9 +55,6 @@ group vomss://voms.grid.iu.edu:8443/voms/osgedu osgedu
 # USER-VO-MAP ops OPS -- 26 -- Rob Quick (rquick@iupui.edu)    
 group vomss://voms2.cern.ch:8443/voms/ops ops
 #-------------------
-# USER-VO-MAP gpn gpn -- 28 -- Brian Bockelman (bbockelm@math.unl.edu)    
-group vomss://cluster.greatplains.net:8443/voms/gpn gpn
-#-------------------
 # USER-VO-MAP compbiogrid CompBioGrid -- 29 -- Fei Gao (fgao@uchc.edu)    
 group vomss://vdvoms.vcell.uchc.edu:8443/voms/CompBioGrid compbiogrid
 #-------------------
@@ -65,7 +62,7 @@ group vomss://vdvoms.vcell.uchc.edu:8443/voms/CompBioGrid compbiogrid
 group vomss://voms.fnal.gov:8443/voms/ilc ilc
 #-------------------
 # USER-VO-MAP nysgrid NYSGRID -- 32 -- Steve Gallo (smgallo@ccr.buffalo.edu)
-group vomss://dylan.ccr.buffalo.edu:8443/voms/nysgrid nysgrid
+group vomss://dylan.ccr.buffalo.edu:8443/voms/NYSGRID NYSGRID
 #-------------------
 # USER-VO-MAP sbgrid SBGrid -- 33 -- Ian Levesque (ian@crystal.harvard.edu)
 group vomss://hpc.sbgrid.org:8443/voms/SBGrid sbgrid
@@ -105,9 +102,6 @@ group vomss://gc-voms.javeriana.edu.co:8443/voms/gcvo gcvo
 #-------------------
 #USER-VO-MAP gcvo GCEDU - 49 - Diego Alberto Rincon Yanez (hyugadisk@gmail.com)
 group vomss://gc-voms.javeriana.edu.co:8443/voms/gcedu gcedu
-#-------------------
-#USER-VO-MAP superb.org SuperB - 50 - Armando Fella (armando.fella@cnaf.infn.it)
-group vomss://voms2.cnaf.infn.it:8443/voms/superbvo.org superbvo.org
 #-------------------
 #USER-VO-MAP dream DREAM - 51 - Alan Sill (Alan.Sill@ttu.edu)
 group vomss://voms.hpcc.ttu.edu:8443/voms/dream dream
