--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -141,3 +141,6 @@ group vomss://voms.grid.sara.nl:8443/voms/xenon.biggrid.nl xenon.biggrid.nl
 #-------------------
 #USER-VO-MAP snoplus.snolab.ca snoplus.snolab.ca - 63 - Freija Descamps (fbdescamps@lbl.gov)
 group vomss://voms.gridpp.ac.uk:8443/voms/snoplus.snolab.ca snoplus.snolab.ca
+#-------------------
+# USER-VO-MAP lz LZ -- 64 -- Tapas Sarangi (tapas@hep.wisc.edu)    
+group vomss://voms.hep.wisc.edu:8443/voms/lz lz
