--- a/gums.template
+++ b/gums.template
@@ -1149,9 +1149,62 @@ url='https://glow-voms.cs.wisc.edu:8443/voms/GLOW/services/VOMSAdmin'
     groupName="LZ"/>
 </groupMapping>
 
+<!-- 65 DUNE -->
+
+<groupMapping name=“dune” accountingVo=“dune” accountingDesc=“DUNE”>
+    <userGroup className="gov.bnl.gums.VOMSGroup"
+    url="https://voms.fnal.gov:8443/voms/dune/services/VOMSAdmin";
+    persistenceFactory="mysql"
+    name="dune"
+    voGroup="/dune"
+    sslCertfile="/etc/grid-security/http/httpcert.pem"
+    sslKey="/etc/grid-security/http/httpkey.pem"
+    matchFQAN="exact"/>
+    <accountMapping className="gov.bnl.gums.GroupAccountMapper" groupName="dune"/>
+</groupMapping>
+
+<groupMapping name="dune-production" accountingVo="dune" accountingDesc="DUNE">
+    <userGroup className="gov.bnl.gums.VOMSGroup"
+    url="https://voms.fnal.gov:8443/voms/dune/services/VOMSAdmin";
+    persistenceFactory="mysql"
+    name="dune-production"
+    voGroup="/dune"
+    voRole="Production"
+    sslCertfile="/etc/grid-security/http/httpcert.pem"
+    sslKey="/etc/grid-security/http/httpkey.pem"
+    matchFQAN="exact"/>
+    <accountMapping className="gov.bnl.gums.GroupAccountMapper" groupName="dunepro"/>
+</groupMapping>
+
+<groupMapping name="duneana" accountingVo="dune" accountingDesc="DUNE">
+    <userGroup className="gov.bnl.gums.VOMSGroup"
+    url="https://voms.fnal.gov:8443/voms/dune/services/VOMSAdmin";
+    persistenceFactory="mysql"
+    name="duneana"
+    voGroup="/dune"
+    voRole="Analysis"
+    sslCertfile="/etc/grid-security/http/httpcert.pem"
+    sslKey="/etc/grid-security/http/httpkey.pem"
+    matchFQAN="exact"/>
+    <accountMapping className="gov.bnl.gums.GroupAccountMapper" groupName="duneana"/>
+</groupMapping>
+
+<groupMapping name="dunegli" accountingVo="dune" accountingDesc="DUNE">
+    <userGroup className="gov.bnl.gums.VOMSGroup"
+    url="https://voms.fnal.gov:8443/voms/dune/services/VOMSAdmin";
+    persistenceFactory="mysql"
+    name="dunegli"
+    voGroup="/dune"
+    voRole="pilot"
+    sslCertfile="/etc/grid-security/http/httpcert.pem"
+    sslKey="/etc/grid-security/http/httpkey.pem"
+    matchFQAN="exact"/>
+    <accountMapping className="gov.bnl.gums.GroupAccountMapper" groupName="dunegli"/>
+</groupMapping>
+
 </groupMappings>
 
 <hostGroups>
-<hostGroup className="gov.bnl.gums.CertificateHostGroup" cn="*/?*.@DOMAINNAME@" groups="cdf-fnal,cdfdev-fnal,cdffgrid-fnal,cdfnam-fnal,cdftestcaf-fnal,cdf-cnaf,cdfdev-cnaf,cdffgrid-cnaf,cdfnam-cnaf,cdftestcaf-cnaf,cdf-pd,cdfdev-pd,cdffgrid-pd,cdfnam-pd,cdftestcaf-pd,fermilab,mis,star,uscmsuser,cmsuser,uscmst2admin,uscmssoft,cmssoft,uscmsprod,uscmsphedex,cmsphedex2,uscmsfrontier,cmsuser-null,cmsproduction,LIGO,dzerouser,dzeroana,dzeroservice,dosar,des,glow,nanohub,geant4,geant4-lcgadmin,osg,osg-goc,newUsatlasProd,newUsatlasSoft,newUsatlas,newAtlas,osgedu,ops,des-production,compbiogrid,ilc,nysgrid,sbgrid,cigi,icecube,alice,gluex,gridunesp,hcc,belle,bellepro,csiu,suragrid,nees,gcvo,gcedu,dream,lbne,lbne-production,lbneana,lbnegli,lsst,uc3,mcdrd,lqcd,auger,glast.org,enmr.eu,osgcrossce,vo.cta.in2p3.fr,xenon.biggrid.nl,snoplus.snolab.ca,LZ"/>
+<hostGroup className="gov.bnl.gums.CertificateHostGroup" cn="*/?*.@DOMAINNAME@" groups="cdf-fnal,cdfdev-fnal,cdffgrid-fnal,cdfnam-fnal,cdftestcaf-fnal,cdf-cnaf,cdfdev-cnaf,cdffgrid-cnaf,cdfnam-cnaf,cdftestcaf-cnaf,cdf-pd,cdfdev-pd,cdffgrid-pd,cdfnam-pd,cdftestcaf-pd,fermilab,mis,star,uscmsuser,cmsuser,uscmst2admin,uscmssoft,cmssoft,uscmsprod,uscmsphedex,cmsphedex2,uscmsfrontier,cmsuser-null,cmsproduction,LIGO,dzerouser,dzeroana,dzeroservice,dosar,des,glow,nanohub,geant4,geant4-lcgadmin,osg,osg-goc,newUsatlasProd,newUsatlasSoft,newUsatlas,newAtlas,osgedu,ops,des-production,compbiogrid,ilc,nysgrid,sbgrid,cigi,icecube,alice,gluex,gridunesp,hcc,belle,bellepro,csiu,suragrid,nees,gcvo,gcedu,dream,lbne,lbne-production,lbneana,lbnegli,lsst,uc3,mcdrd,lqcd,auger,glast.org,enmr.eu,osgcrossce,vo.cta.in2p3.fr,xenon.biggrid.nl,snoplus.snolab.ca,LZ,dune,dune-production,duneana,dunegli"/>
 </hostGroups>
 </gums>
