--- a/gums.template
+++ b/gums.template
@@ -1151,7 +1151,7 @@ url='https://glow-voms.cs.wisc.edu:8443/voms/GLOW/services/VOMSAdmin'
 
 <!-- 65 DUNE -->
 
-<groupMapping name=“dune” accountingVo=“dune” accountingDesc=“DUNE”>
+<groupMapping name="dune" accountingVo="dune" accountingDesc="DUNE">
     <userGroup className="gov.bnl.gums.VOMSGroup"
     url="https://voms.fnal.gov:8443/voms/dune/services/VOMSAdmin";
     persistenceFactory="mysql"
