--- a/gums.template
+++ b/gums.template
@@ -1153,7 +1153,7 @@ url='https://glow-voms.cs.wisc.edu:8443/voms/GLOW/services/VOMSAdmin'
 
 <groupMapping name="dune" accountingVo="dune" accountingDesc="DUNE">
     <userGroup className="gov.bnl.gums.VOMSGroup"
-    url="https://voms.fnal.gov:8443/voms/dune/services/VOMSAdmin";
+    url="https://voms.fnal.gov:8443/voms/dune/services/VOMSAdmin"
     persistenceFactory="mysql"
     name="dune"
     voGroup="/dune"
@@ -1165,7 +1165,7 @@ url='https://glow-voms.cs.wisc.edu:8443/voms/GLOW/services/VOMSAdmin'
 
 <groupMapping name="dune-production" accountingVo="dune" accountingDesc="DUNE">
     <userGroup className="gov.bnl.gums.VOMSGroup"
-    url="https://voms.fnal.gov:8443/voms/dune/services/VOMSAdmin";
+    url="https://voms.fnal.gov:8443/voms/dune/services/VOMSAdmin"
     persistenceFactory="mysql"
     name="dune-production"
     voGroup="/dune"
@@ -1178,7 +1178,7 @@ url='https://glow-voms.cs.wisc.edu:8443/voms/GLOW/services/VOMSAdmin'
 
 <groupMapping name="duneana" accountingVo="dune" accountingDesc="DUNE">
     <userGroup className="gov.bnl.gums.VOMSGroup"
-    url="https://voms.fnal.gov:8443/voms/dune/services/VOMSAdmin";
+    url="https://voms.fnal.gov:8443/voms/dune/services/VOMSAdmin"
     persistenceFactory="mysql"
     name="duneana"
     voGroup="/dune"
@@ -1191,7 +1191,7 @@ url='https://glow-voms.cs.wisc.edu:8443/voms/GLOW/services/VOMSAdmin'
 
 <groupMapping name="dunegli" accountingVo="dune" accountingDesc="DUNE">
     <userGroup className="gov.bnl.gums.VOMSGroup"
-    url="https://voms.fnal.gov:8443/voms/dune/services/VOMSAdmin";
+    url="https://voms.fnal.gov:8443/voms/dune/services/VOMSAdmin"
     persistenceFactory="mysql"
     name="dunegli"
     voGroup="/dune"
