--- a/edg-mkgridmap.conf
+++ b/edg-mkgridmap.conf
@@ -144,3 +144,8 @@ group vomss://voms.gridpp.ac.uk:8443/voms/snoplus.snolab.ca snoplus.snolab.ca
 #-------------------
 # USER-VO-MAP lz LZ -- 64 -- Tapas Sarangi (tapas@hep.wisc.edu)    
 group vomss://voms.hep.wisc.edu:8443/voms/lz lz
+#-------------------
+#USER-VO-MAP dune DUNE -- 65 -- Thomas Robert Junk (trj@fnal.gov)
+group vomss://voms.fnal.gov:8443/voms/dune dune
+#-------------------
+
