--- a/edg-mkgridmap.config
+++ b/edg-mkgridmap.config
@@ -21,10 +21,9 @@ group vomss://voms2.cern.ch:8443/voms/atlas usatlas4
 #-------------------
 # USER-VO-MAP cms CMS -- 11 -- (uscms-ops@fnal.gov)      
 group vomss://voms2.cern.ch:8443/voms/cms uscms01
-group vomss://voms.fnal.gov:8443/voms/cms uscms01
 #-------------------
 # USER-VO-MAP ligo LIGO -- 12 -- Patrick Brady (patrick@gravity.phys.uwm.edu)    
-group vomss://voms.ligo.org:8443/voms/LIGO ligo
+group vomss://voms.opensciencegrid.org:8443/voms/osg?/osg/ligo ligo
 #-------------------
 # USER-VO-MAP dzero DZERO -- 13 -- Fermilab Service Desk (servicedesk@fnal.gov)  
 group vomss://voms.fnal.gov:8443/voms/dzero?/dzero/users samgrid
